# ocrd_llm

./: .gitignore  Dockerfile  MANIFEST  README.md  docker-compose.yaml  ocrd-tool.json  pyproject.toml  requirements.txt
ocrd_llm/: cli.py  ocrd-tool.json  recognize.py
